@@ -1710,14 +1710,14 @@ char *usetxt[] = {
 	"  -c                   ASlink >> prompt input",
 	"  -f   file[.lk]       Command File input",
 	"Libraries:",
-	"  -k	Library path specification, one per -k",
-	"  -l	Library file specification, one per -l",
+	"  -k   Library path specification, one per -k",
+	"  -l   Library file specification, one per -l",
 	"Relocation:",
 	"  -b   area base address = expression",
 	"  -g   global symbol = expression",
 	"Map format:",
 	"  -m   Map output generated as (out)file[.map]",
-	"  -w	Wide listing format for map file",
+	"  -w   Wide listing format for map file",
 	"  -x   Hexadecimal (default)",
 	"  -d   Decimal",
 	"  -q   Octal",
@@ -1734,9 +1734,9 @@ char *usetxt[] = {
 //	"  -o   Linked file/library object output enable (default)",
 //	"  -v   Linked file/library object output disable",
 	"List:",
-	"  -u	Update listing file(s) with link data as file(s)[.rst]",
+	"  -u   Update listing file(s) with link data as file(s)[.rst]",
 	"Case Sensitivity:",
-	"  -z	Disable Case Sensitivity for Symbols",
+	"  -z   Disable Case Sensitivity for Symbols",
 	"End:",
 	"  -e   or null line terminates input",
 	"",
@@ -1760,7 +1760,7 @@ char *usetxt_8051[] = {
 	"  -g   global symbol = expression",
 	"Map format:",
 	"  -m   Map output generated as (out)file[.map]",
-	"  -w	Wide listing format for map file",
+	"  -w   Wide listing format for map file",
 	"  -x   Hexadecimal (default)",
 	"  -d   Decimal",
 	"  -q   Octal",
@@ -1776,7 +1776,7 @@ char *usetxt_8051[] = {
 	"List:",
 	"  -u   Update listing file(s) with link data as file(s)[.rst]",
 	"Case Sensitivity:",
-	"  -z	Disable Case Sensitivity for Symbols",
+	"  -z   Disable Case Sensitivity for Symbols",
 	"Miscellaneous:\n"
 	"  -I   [iram-size] Check for internal RAM overflow",
 	"  -X   [xram-size] Check for external RAM overflow",
@@ -1807,7 +1807,7 @@ char *usetxt_6808[] = {
 	"  -g   global symbol = expression",
 	"Map format:",
 	"  -m   Map output generated as (out)file[.map]",
-	"  -w	Wide listing format for map file",
+	"  -w   Wide listing format for map file",
 	"  -x   Hexadecimal (default)",
 	"  -d   Decimal",
 	"  -q   Octal",
@@ -1824,7 +1824,7 @@ char *usetxt_6808[] = {
 	"List:",
 	"  -u   Update listing file(s) with link data as file(s)[.rst]",
 	"Case Sensitivity:",
-	"  -z	Disable Case Sensitivity for Symbols",
+	"  -z   Disable Case Sensitivity for Symbols",
 	"Miscellaneous:\n"
 	"  -I   [iram-size] Check for internal RAM overflow",
 	"  -X   [xram-size] Check for external RAM overflow",
@@ -1853,7 +1853,7 @@ char *usetxt_z80_gb[] = {
 	"  -g   global symbol = expression",
 	"Map format:",
 	"  -m   Map output generated as (out)file[.map]",
-	"  -w	Wide listing format for map file",
+	"  -w   Wide listing format for map file",
 	"  -x   Hexadecimal (default)",
 	"  -d   Decimal",
 	"  -q   Octal",
